--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 	<link rel="shortcut icon" class="ajax-link" href="/darkrain_band/images/sonstiges/favicon.ico" />
 	<link rel="stylesheet" type="text/css" media="screen" class="ajax-link" href="/darkrain_band/css/styles.css" />
 	<link rel="stylesheet" type="text/css" media="print, embossed"	class="ajax-link" href="/darkrain_band/css/druck.css" />
-	<meta name="DR.domain" content="https://markusbrunner-design.github.io" />
+  <meta name="DR.domain" content="https://darkrain_band.markusbrunner.de" />
+	<meta name="DR.domain.github" content="https://markusbrunner-design.github.io" />
+  <meta name="DR.domain.github.folder" content="darkrain_band" />
   	<script language="JavaScript" type="text/javascript" src="/darkrain_band/javascript/zoom.js" /></script>
   	<title>Dark Rain - Band</title>
 </head>
