--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
 	<meta name="DC.Type" content="Text" />
 	<meta name="DC.Rights" content="Dark Rain" />
 	<meta name="DC.Format" content="text/html" />
-	<link rel="shortcut icon" class="ajax-link" href="/darkrain_band/images/sonstiges/favicon.ico" />
-	<link rel="stylesheet" type="text/css" media="screen" class="ajax-link" href="/darkrain_band/css/styles.css" />
-	<link rel="stylesheet" type="text/css" media="print, embossed"	class="ajax-link" href="/darkrain_band/css/druck.css" />
+	<link rel="shortcut icon" href="images/sonstiges/favicon.ico" />
+	<link rel="stylesheet" type="text/css" media="screen" class="ajax-link" href="css/styles.css" />
+	<link rel="stylesheet" type="text/css" media="print, embossed"	class="ajax-link" href="css/druck.css" />
   <meta name="DR.domain" content="https://darkrain_band.markusbrunner.de" />
-	<meta name="DR.domain.github" content="https://markusbrunner-design.github.io" />
-  <meta name="DR.domain.github.folder" content="darkrain_band" />
-  	<script language="JavaScript" type="text/javascript" src="/darkrain_band/javascript/zoom.js" /></script>
-  	<title>Dark Rain - Band</title>
+	<meta name="DR.domain.github" content="https://markusbrunner-design.github.io/darkrain_band" />
+  <script language="JavaScript" type="text/javascript" src="javascript/zoom.js" /></script>
+  <title>Dark Rain - Band</title>
 </head>
 <body>
 <h1 class="displaynone">Dark Rain - die offizielle Homepage</h1>
@@ -33,27 +32,27 @@
     </div>
     <div class="keindruck">
       <ul id="navigation">
-        <li><a class="ajax-link" href="/darkrain_band/auftritte/auftritte.html?menue=auftritte">Auftritte</a></li>
+        <li><a class="ajax-link" href="auftritte/auftritte.html?menue=auftritte">Auftritte</a></li>
           <ul>
-            <li><a class="ajax-link" href="/darkrain_band/auftritte/bilder_mp3s_videos/bilder_mp3s_videos.html?menue=auftritte">B. MP3 V.</a></li>
+            <li><a class="ajax-link" href="auftritte/bilder_mp3s_videos/bilder_mp3s_videos.html?menue=auftritte">B. MP3 V.</a></li>
           </ul>
-        <li><a class="ajax-link" href="/darkrain_band/discographie/discographie.html">Discographie</a></li>
-        <li><a class="ajax-link" href="/darkrain_band/biographie/biographie.html?menue=biographie">Biographie</a></li>
+        <li><a class="ajax-link" href="discographie/discographie.html">Discographie</a></li>
+        <li><a class="ajax-link" href="biographie/biographie.html?menue=biographie">Biographie</a></li>
           <ul>
-            <li><a class="ajax-link" href="/darkrain_band/biographie/dark_rain/entstehung.html?menue=biographie">DR-Entstehung</a></li>
-            <li><a class="ajax-link" href="/darkrain_band/biographie/sarah/sarah.html?menue=biographie">Sarah/Faith</a></li>
-            <li><a class="ajax-link" href="/darkrain_band/biographie/harry/harry.html?menue=biographie">Harry/Marry</a></li>
-            <li><a class="ajax-link" href="/darkrain_band/biographie/markus/markus.html?menue=biographie">Markus/Mac</a></li>
-            <li><a class="ajax-link" href="/darkrain_band/biographie/katja/katja.html?menue=biographie">Katja/Whizz Kid</a></li>
+            <li><a class="ajax-link" href="biographie/dark_rain/entstehung.html?menue=biographie">DR-Entstehung</a></li>
+            <li><a class="ajax-link" href="biographie/sarah/sarah.html?menue=biographie">Sarah/Faith</a></li>
+            <li><a class="ajax-link" href="biographie/harry/harry.html?menue=biographie">Harry/Marry</a></li>
+            <li><a class="ajax-link" href="biographie/markus/markus.html?menue=biographie">Markus/Mac</a></li>
+            <li><a class="ajax-link" href="biographie/katja/katja.html?menue=biographie">Katja/Whizz Kid</a></li>
           </ul>
       </ul>
     </div>
   </div>
   <div id="right">
   <div id="header">
-    <a class="imagelink" class="ajax-link" href="/darkrain_band/" style="padding-left: 25px" ><img class="keindruck" alt="Logo von Dark Rain" src="/darkrain_band/images/logos/darkrain_logo_transp_500.gif" width="500" border="none" style="padding-bottom: 5px"/></a>
+    <a class="imagelink" class="ajax-link" href="" style="padding-left: 25px" ><img class="keindruck" alt="Logo von Dark Rain" src="images/logos/darkrain_logo_transp_500.gif" width="500" border="none" style="padding-bottom: 5px"/></a>
     <br />
-    <img class="keindruck" alt="" src="/darkrain_band/images/sonstiges/linie.gif" width="550" />
+    <img class="keindruck" alt="" src="images/sonstiges/linie.gif" width="550" />
     <div class="displaynone">
       <hr />
       <br />
@@ -63,8 +62,8 @@
     </div>
     <div class="nav1" style="text-align: right;">
 	    <span id="metanavigation" style="padding-right: 25px">
-		  <a class="keindruck" class="ajax-link" href="/darkrain_band/impressum/impressum.html">Impressum</a>&nbsp;&nbsp;&nbsp;
-		  <a class="keindruck" class="ajax-link" href="/darkrain_band/agb/agb.html">AGB</a>
+		  <a class="keindruck" class="ajax-link" href="impressum/impressum.html">Impressum</a>&nbsp;&nbsp;&nbsp;
+		  <a class="keindruck" class="ajax-link" href="agb/agb.html">AGB</a>
 		</span>
     </div>
     <div class="displaynone">
@@ -115,13 +114,13 @@
       <br />
       <br />
      </div>
-	 <img class="keindruck" alt="" src="/darkrain_band/images/sonstiges/linie.gif" width="550" /><br />
+	 <img class="keindruck" alt="" src="images/sonstiges/linie.gif" width="550" /><br />
      <span class="inhalt3" style="padding-left: 25px;">
-	  Copyright by Dark Rain<a class="ajax-link" href="/darkrain_band/sonstiges/markengesetz_darkrain/markengesetz_darkrain.html"><span class="hochgestellt">&reg;</span></a>&nbsp;&nbsp;&ndash;&nbsp;&nbsp;Pop / Hard Rock / Melodic Metal
+	  Copyright by Dark Rain<a class="ajax-link" href="sonstiges/markengesetz_darkrain/markengesetz_darkrain.html"><span class="hochgestellt">&reg;</span></a>&nbsp;&nbsp;&ndash;&nbsp;&nbsp;Pop / Hard Rock / Melodic Metal
      </span>
     </div>
   </div>
 </div>
-<script src="/darkrain_band/javascript/script.js"></script>
+<script src="javascript/script.js"></script>
 </body>
 </html>
