--- a/biographie/dark_rain/entstehung.html
+++ b/biographie/dark_rain/entstehung.html
@@ -1,6 +1,3 @@
-<?php include '../../include/head.php'; ?>
-
-
 	<h1>Wie alles entstand</h1>
 	<p class="inhalt1">
 		Es war einmal ein dunkler Halloweentag
@@ -146,9 +143,64 @@
 	<p class="lyrics">
 		Markus, Juli 2001
 	</p>
-	<p class="inhalt1" align="center">
-		<br />
-		<a href="../biographie.php">&laquo; zur&uuml;ck</a>&emsp;&emsp;&emsp;<a href="entstehung2.php">weiter &raquo;</a>
-	</p>
 
-<?php include '../../include/footer.php'; ?>
+
+	<h1>Wie es weiterging</h1>
+	<img alt="Bild von den Alben von 2001 und 2003" src="../../shop/bilder/alben_2001_2003.jpg" style="float:right; margin-left:10px;" width="125" />
+	<p class="inhalt1">
+		In dieser Konstellation flogen die vier 2001 kurzerhand nach Amerika um im Echo-Beach-Studio
+		in Florida das erste Album, &quot;The First Songs&quot;, f&uuml;r die Nachwelt zu verewigen. Das zweite Album
+		&quot;Frame of Mind&quot; folgte 2003 und bestand bereits aus stolzen 17 Titeln.
+	</p>
+	<p class="inhalt1">
+		So gingen die Jahre ins Land &ndash; um genau zu sein knapp 4 Jahre &ndash; und abermals stand ein Bassisten-Wechsel an.
+		Liza hatte das st&auml;ndige Blitzgewitter der Paparazzi satt und wechselte ihre Musikvorliebe um 180&deg;.
+		Selbst der superteuere Musicman-Bass, den sie von ihrem Vater bekam, konnte sie nicht &uuml;berzeugen dabei zu bleiben.
+	</p>
+	<p class="inhalt1">
+		Nun schien es, als h&auml;tte sich das eingespielte Team ausgespielt: ein halbes Jahr lang bestand Dark Rain nur noch
+		aus Sarah, Markus und Harry. Trotz aller Anstrengungen und Bem&uuml;hungen wollte sich einfach kein neuer Bassist finden lassen.
+	</p>
+	<p class="inhalt1">
+		So. Und nun komme ich ins Spiel. Irgendwann dachte ich bei mir: &quot;Ach, studier doch einfach Mediendesign!&quot;.
+		Und Markus dachte sich irgendwann: &quot;Ach, studier doch einfach Mediendesign!&quot;. Durch diese gl&uuml;ckliche F&uuml;gung
+		des Schicksals lernten wir uns also kennen verstanden uns auf Anhieb gut, was wohl in einer von HipHop- und Baggiehosen-regierten
+		Welt vor allem am gleichen Musikgeschmack gelegen haben muss ... Er erz&auml;hlte mir, dass er in einer Band namens &quot;Dark Rain&quot;
+		die Saiten schwingen l&auml;sst und brachte mir gleich am folgenden Tag (nat&uuml;rlich aus reiner N&auml;chstenliebe und nicht aus Promotionzwecken)
+		beide Alben mit.
+	</p>
+	<img alt="Bild vom Auftritt in Adelsheim 2005" src="../../auftritte/auftritte_2005-06-18/auftritte_2005-06-18_7_125.jpg" style="float:left; margin-right:10px;" width="125" />
+	<p class="inhalt1">
+		Und wer h&auml;tte es gedacht? &ndash; Ich fand die CDs richtig klasse und prophezeite ihm voller Begeisterung sodann eine gro&szlig;e
+		Zukunft. Anstatt sich zu freuen kullerte ihm jedoch eine einsame Tr&auml;ne &uuml;ber die Wange (irgendwie muss ich meine Geschichte doch aufwerten!)
+		und er sagte mir, dass ihre Bassistin sie wohl bald verlassen wird. Dem geschah dann auch so und schon als ich das erste Mal zur Bandprobe
+		zum Zuh&ouml;ren (ich hielt mich immer f&uuml;r schrecklich unmusikalisch) eingeladen war, war Liza nicht mehr dabei. In meinem musikalischen Unwissen
+		hielt ich es zwar nicht f&uuml;r unm&ouml;glich, dass die drei ohne Bass weitermachen, da ich auch so vollkommen fasziniert von dem, was sie mir da
+		darboten, war, aber ich half dann doch mit einen neuen Bassisten zu suchen.
+	</p>
+	<p class="inhalt1">
+		Nachdem die riesige Welle an Meldungen ausblieb, dr&uuml;ckte mir Markus einfach mal seinen Bass in die Hand und ich klimperte ein wenig darauf rum.
+		Und irgendwie machte es Spa&szlig;. So zerrte mich Markus mit meiner 10-min&uuml;tigen Erfahrung mit zur Bandprobe. Harry und Sarah waren sichtlich erfreut
+		und sahen sofort ihre neue Bassistin in mir. Nat&uuml;rlich hab ich ihnen gleich gesagt, dass ich doch total unmusikalisch sei, aber Harry sah als
+		Gegenbeweis allein, dass ich den Bass richtig rum hielt (nat&uuml;rlich nur zu &uuml;berredungszwecken) ... Ich bot ihnen jedoch meine mir in der zweiten
+		Klasse angeeigneten Blockfl&ouml;tenk&uuml;nste an, doch das wollten sie nicht wirklich w&uuml;rdigen. Also griff ich dann doch in die Saiten. &quot;In zweieinhalb
+		Monaten ist Auftritt. K&ouml;nnen wir mit dir rechnen?&quot; &ndash; erschien mir nat&uuml;rlich vollkommen absurd, da ich ja auch ganz nebenbei angefangen
+		hatte zu studieren und ich mir ja nicht nur die Lieder merken, sondern auch das Bass spielen an sich erstmal lernen musste.
+	</p>
+	<p class="inhalt1">
+		Na ja, 4 Wochen sp&auml;ter stand dann erstmal mein eigener Bass in meinem Zimmer und ich war vom ersten Tag an bei jeder Bandprobe mit von der Partie.
+	</p>
+	<p class="inhalt1">
+		Noch mal 4 Wochen sp&auml;ter &uuml;bernahm netterweise Steffen von Scrunge die 4 Saiten und so hatte ich weitere 2 Wochen bis zu meinem ersten
+		Auftritt. So wurde ich vom Fan zum Mitglied und stand nach zweieinhalb Monaten Basserfahrung auf der B&uuml;hne. Dadurch verdiente ich mir dann meinen Bandnamen
+		&quot;whizz kid&quot; &ndash; Senkrechtstarter.
+	</p>
+	<img alt="Bild vom Auftritt in M&uuml;nchen" src="../../auftritte/auftritte_2005-07-20/auftritte_2005-07-20_17_125.jpg" style="float:right; margin-left:10px;" width="125" />
+	<p class="inhalt1">
+		Und da mir Bass spielen mehr Spa&szlig; als Schreiben macht, schlie&szlig;e ich mit Markus Worten (in abge&auml;nderter, kommentierter Form): Kurzum, ab nun bestand
+		unsere Band wieder aus vier Mitgliedern. So ist es bis heute geblieben, und so wird es nun auch bleiben, denn heute sind wir mehr als nur eine Band,
+		wir sind ein eingespieltes Team (&ouml;hm, ja, ich geb mir M&uuml;he ...), das zusammengeh&ouml;rt, und das nun auch gut zu viert klar kommt.
+	</p>
+	<p class="lyrics">
+		Katja, Juli 2005
+	</p>
