--- a/discographie/discographie.html
+++ b/discographie/discographie.html
@@ -89,3 +89,17 @@
 			</td>
 		</tr>
 	</table>
+
+	<h2>Hope (das unvollendete Album)</h2>
+	<p class="inhalt1">
+		<img src="../../images/sonstiges/leather_book_cd-hope.png" width="250px" height="250px" /><br />
+		Songs: <a href="http://www.mp3.de/home/darkrain1">auf mp3.de</a><br />
+		Stra&szlig;enkinderlied-2-Musikvideo: <a href="http://www.youtube.com/watch?v=lDht0OuHjoE">auf youtube.com</a><br />
+		<object width="425" height="350"><param name="movie" value="http://www.youtube.com/v/lDht0OuHjoE"></param><embed src="http://www.youtube.com/v/lDht0OuHjoE" type="application/x-shockwave-flash" width="425" height="350"></embed></object>
+	</p>
+
+	<br />
+	<p class="inhalt1">
+		<img alt="Bild vom Auftritt beim Bretthart-Festival" src="../auftritte_2005-06-17/auftritte_2005-06-17_17_500.jpg" width="450" border="0" />
+	</p>
+	<br />
