--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     </div>
     <div class="nav1" style="text-align: right;">
 	    <span id="metanavigation" style="padding-right: 25px">
-		  <a class="keindruck" class="ajax-link" href="impressum/impressum.html">Impressum</a>&nbsp;&nbsp;&nbsp;
-		  <a class="keindruck" class="ajax-link" href="agb/agb.html">AGB</a>
+		  <a class="keindruck ajax-link" href="impressum/impressum.html">Impressum</a>&nbsp;&nbsp;&nbsp;
+		  <a class="keindruck ajax-link" href="agb/agb.html">AGB</a>
 		</span>
     </div>
     <div class="displaynone">
