--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 	<meta name="DC.Type" content="Text" />
 	<meta name="DC.Rights" content="Dark Rain" />
 	<meta name="DC.Format" content="text/html" />
-	<link rel="shortcut icon" href="images/sonstiges/favicon.ico" />
-	<link rel="stylesheet" type="text/css" media="screen" class="ajax-link" href="css/styles.css" />
-	<link rel="stylesheet" type="text/css" media="print, embossed"	class="ajax-link" href="css/druck.css" />
+	<link rel="shortcut icon" href="./images/sonstiges/favicon.ico" />
+	<link rel="stylesheet" type="text/css" media="screen" href="./css/styles.css" />
+	<link rel="stylesheet" type="text/css" media="print, embossed"href="./css/druck.css" />
   <meta name="DR.domain" content="https://darkrain_band.markusbrunner.de" />
 	<meta name="DR.domain.github" content="https://markusbrunner-design.github.io/darkrain_band" />
-  <script language="JavaScript" type="text/javascript" src="javascript/zoom.js" /></script>
+  <script language="JavaScript" type="text/javascript" src="./javascript/zoom.js" /></script>
   <title>Dark Rain - Band</title>
 </head>
 <body>
@@ -50,9 +50,9 @@
   </div>
   <div id="right">
   <div id="header">
-    <a class="imagelink" class="ajax-link" href="" style="padding-left: 25px" ><img class="keindruck" alt="Logo von Dark Rain" src="images/logos/darkrain_logo_transp_500.gif" width="500" border="none" style="padding-bottom: 5px"/></a>
+    <a class="imagelink" class="ajax-link" href="" style="padding-left: 25px" ><img class="keindruck" alt="Logo von Dark Rain" src="./images/logos/darkrain_logo_transp_500.gif" width="500" border="none" style="padding-bottom: 5px"/></a>
     <br />
-    <img class="keindruck" alt="" src="images/sonstiges/linie.gif" width="550" />
+    <img class="keindruck" alt="" src="./images/sonstiges/linie.gif" width="550" />
     <div class="displaynone">
       <hr />
       <br />
@@ -78,30 +78,30 @@
   <div id="content">
 	<p class="lyrics">Herzlich Willkommen auf der offiziellen Website von Dark Rain</p>
 	
-	<h2><a href="auftritte/auftritte.html?menue=auftritte">Auftritte</a></h2>
+	<h2><a class="ajax-link" href="auftritte/auftritte.html?menue=auftritte">Auftritte</a></h2>
 	<p class="inhalt1">
 		Hier findest Du immer alle aktuellen Auftrittstermine.
 		Dann gibt es noch alle m&ouml;glichen Bilder, MP3s und Videos zu schon
 		vergangenen Auftritten.
 	</p>
 	
-	<h2><a href="discographie/discographie.html">Discographie</a></h2>
+	<h2><a class="ajax-link" href="discographie/discographie.html">Discographie</a></h2>
 	<p class="inhalt1">
 		Hier haben wir f&uuml;r Dich alle unsere Alben aufgelistet, die wir aufgenommen haben.
 		Songausschnitte einger Lieder kannst Du Dir hier auch anh&ouml;ren.
 	</p>
 	
-	<h2><a href="biographie/biographie.html?menue=biographie">Biographie</a></h2>
+	<h2><a class="ajax-link" href="biographie/biographie.html?menue=biographie">Biographie</a></h2>
 	<p class="inhalt1">
 		Wei&szlig;t Du auch schon Alles &uuml;ber Dark Rain und seine Bandmitglieder?
 	</p>
 	
-	<h2><a href="impressum/impressum.html">Impressum</a></h2>
+	<h2><a class="ajax-link" href="impressum/impressum.html">Impressum</a></h2>
 	<p class="inhalt1">
 		Die Verantwortlichen f&uuml;r diesen Web-Auftritt.
 	</p>
 	
-	<h2><a href="agb/agb.html">AGB</a></h2>
+	<h2><a class="ajax-link" href="agb/agb.html">AGB</a></h2>
 	<p class="inhalt1">
 		Die AGB dieser Website und f&uuml;r auf dieser Website im Shop get&auml;tigte Bestellungen.
 	</p>
@@ -114,13 +114,13 @@
       <br />
       <br />
      </div>
-	 <img class="keindruck" alt="" src="images/sonstiges/linie.gif" width="550" /><br />
+	 <img class="keindruck" alt="" src="./images/sonstiges/linie.gif" width="550" /><br />
      <span class="inhalt3" style="padding-left: 25px;">
 	  Copyright by Dark Rain<a class="ajax-link" href="sonstiges/markengesetz_darkrain/markengesetz_darkrain.html"><span class="hochgestellt">&reg;</span></a>&nbsp;&nbsp;&ndash;&nbsp;&nbsp;Pop / Hard Rock / Melodic Metal
      </span>
     </div>
   </div>
 </div>
-<script src="javascript/script.js"></script>
+<script src="./javascript/script.js"></script>
 </body>
 </html>
