--- a/index.html
+++ b/index.html
@@ -32,11 +32,8 @@
     </div>
     <div class="keindruck">
       <ul id="navigation">
-        <li><a class="ajax-link" href="auftritte/auftritte.html?menue=auftritte">Auftritte</a></li>
-          <ul>
-            <li><a class="ajax-link" href="auftritte/bilder_mp3s_videos/bilder_mp3s_videos.html?menue=auftritte">B. MP3 V.</a></li>
-          </ul>
-        <li><a class="ajax-link" href="discographie/discographie.html">Discographie</a></li>
+        <li><a class="ajax-link" href="auftritte/bilder_mp3s_videos/bilder_mp3s_videos.html?menue=auftritte">Auftritte</a></li>
+        <li><a class="ajax-link" href="discographie/discographie.html?menue=discographie">Discographie</a></li>
         <li><a class="ajax-link" href="biographie/biographie.html?menue=biographie">Biographie</a></li>
           <ul>
             <li><a class="ajax-link" href="biographie/dark_rain/entstehung.html?menue=biographie">DR-Entstehung</a></li>
@@ -78,14 +75,14 @@
   <div id="content">
 	<p class="lyrics">Herzlich Willkommen auf der offiziellen Website von Dark Rain</p>
 	
-	<h2><a class="ajax-link" href="auftritte/auftritte.html?menue=auftritte">Auftritte</a></h2>
+	<h2><a class="ajax-link" href="auftritte/bilder_mp3s_videos/bilder_mp3s_videos.html?menue=auftritte">Auftritte</a></h2>
 	<p class="inhalt1">
 		Hier findest Du immer alle aktuellen Auftrittstermine.
 		Dann gibt es noch alle m&ouml;glichen Bilder, MP3s und Videos zu schon
 		vergangenen Auftritten.
 	</p>
 	
-	<h2><a class="ajax-link" href="discographie/discographie.html">Discographie</a></h2>
+	<h2><a class="ajax-link" href="discographie/discographie.html?menue=discographie">Discographie</a></h2>
 	<p class="inhalt1">
 		Hier haben wir f&uuml;r Dich alle unsere Alben aufgelistet, die wir aufgenommen haben.
 		Songausschnitte einger Lieder kannst Du Dir hier auch anh&ouml;ren.
