--- a/impressum/impressum.html
+++ b/impressum/impressum.html
@@ -8,14 +8,13 @@
 	<p class="inhalt1">
 		<strong>Dark Rain</strong><br />
 		Stellvertretend: <strong>Markus Brunner</strong><br />
-		Mail: <strong>dark-rain(dot)info(at)web(dot)de</strong><br />
-		Web: <a href="http://www.markusbrunner.de" target="_blank">www.markusbrunner.de</a>
+		Web: <a href="https://www.markusbrunner.de" target="_blank">www.markusbrunner.de</a>
 	</p>
 	<h2>
 		Grafik/Design:
 	</h2>
 	<p class="inhalt1">
-		<a href="http://www.markusbrunner.de" target="_blank">Markus Brunner</a>, 
-		<a href="http://www.katjadeutschmann.de" target="_blank">Katja Brunner</a><br />
+		<a href="https://www.markusbrunner.de" target="_blank">Markus Brunner</a>, 
+		<a href="https://www.katjadeutschmann.de" target="_blank">Katja Brunner</a><br />
 	</p>
 	<br />
