--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <ul id="navigation">
         <li><a class="ajax-link" href="auftritte/bilder_mp3s_videos/bilder_mp3s_videos.html?menue=auftritte">Auftritte</a></li>
         <li><a class="ajax-link" href="discographie/discographie.html?menue=discographie">Discographie</a></li>
-        <li><a class="ajax-link" href="biographie/biographie.html?menue=biographie">Biographie</a></li>
+        <li>Biographie</li>
           <ul>
             <li><a class="ajax-link" href="biographie/dark_rain/entstehung.html?menue=biographie">DR-Entstehung</a></li>
             <li><a class="ajax-link" href="biographie/sarah/sarah.html?menue=biographie">Sarah/Faith</a></li>
@@ -88,7 +88,7 @@
 		Songausschnitte einger Lieder kannst Du Dir hier auch anh&ouml;ren.
 	</p>
 	
-	<h2><a class="ajax-link" href="biographie/biographie.html?menue=biographie">Biographie</a></h2>
+	<h2><a class="ajax-link" href="biographie/dark_rain/entstehung.html?menue=biographie">Biographie Dark Rain</a></h2>
 	<p class="inhalt1">
 		Wei&szlig;t Du auch schon Alles &uuml;ber Dark Rain und seine Bandmitglieder?
 	</p>
