--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 	<link rel="shortcut icon" href="./images/sonstiges/favicon.ico" />
 	<link rel="stylesheet" type="text/css" media="screen" href="./css/styles.css" />
 	<link rel="stylesheet" type="text/css" media="print, embossed"href="./css/druck.css" />
-  <meta name="DR.domain" content="https://darkrain_band.markusbrunner.de" />
-	<meta name="DR.domain.github" content="https://markusbrunner-design.github.io/darkrain_band" />
+  <base href="https://markusbrunner-design.github.io/darkrain_band/">
   <script language="JavaScript" type="text/javascript" src="./javascript/zoom.js" /></script>
   <title>Dark Rain - Band</title>
 </head>
