--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
     </div>
     <div class="nav1" style="text-align: right;">
 	    <span id="metanavigation" style="padding-right: 25px">
-		  <a class="keindruck ajax-link" href="impressum/impressum.html">Impressum</a>&nbsp;&nbsp;&nbsp;
-		  <a class="keindruck ajax-link" href="agb/agb.html">AGB</a>
+		  <a class="keindruck ajax-link" href="impressum/impressum.html">Impressum</a>
 		</span>
     </div>
     <div class="displaynone">
@@ -95,11 +94,6 @@
 	<h2><a class="ajax-link" href="impressum/impressum.html">Impressum</a></h2>
 	<p class="inhalt1">
 		Die Verantwortlichen f&uuml;r diesen Web-Auftritt.
-	</p>
-	
-	<h2><a class="ajax-link" href="agb/agb.html">AGB</a></h2>
-	<p class="inhalt1">
-		Die AGB dieser Website und f&uuml;r auf dieser Website im Shop get&auml;tigte Bestellungen.
 	</p>
 		</div>
     <div id="footer">
