--- a/biographie/dark_rain/entstehung.html
+++ b/biographie/dark_rain/entstehung.html
@@ -9,7 +9,7 @@
 		als ich es mir h&auml;tte vorstellen k&ouml;nnen,
 		doch etwas fehlte mir!
 	</p>
-	<img alt="Bild von den Studioaufnahmen 2001" src="../../multimedia/bilder/studio/studio_2001/studio_2001_1_125.jpg" style="float:left; margin-right:10px;" width="125" />
+	<img alt="Bild von den Studioaufnahmen 2001" src="https://markusbrunner-design.github.io/darkrain_media/bilder/studio/studio_2001/studio_2001_1_125.jpg" style="float:left; margin-right:10px;" width="125" />
 	<p class="inhalt1">
 		Ich kannte bis dahin nur unsere S&auml;ngerin (Sarah),
 		doch dies sollte nicht so bleiben! Ich fragte mich,
@@ -61,7 +61,7 @@
 		nicht rumstehen wollte,
 		schnappte sie sich den Bass.
 	</p>
-	<img alt="Bild von den Promotionaufnahmen 2001" src="../../multimedia/bilder/promotion/promotion_2001/promotion_2001_4_125.jpg" style="float:right; margin-left:10px;" width="125" />
+	<img alt="Bild von den Promotionaufnahmen 2001" src="https://markusbrunner-design.github.io/darkrain_media/bilder/promotion/promotion_2001/promotion_2001_4_125.jpg" style="float:right; margin-left:10px;" width="125" />
 	<p class="inhalt1">
 		Als wir so nun rund eine
 		halbe Stunde verbrachten
@@ -122,7 +122,7 @@
 		(praktisch eine riesige Garage,
 		blo&szlig; f&uuml;r einen Helikopter) stattfand.
 	</p>
-	<img alt="Bild vom Auftritt beim BGB Buchen" src="../../auftritte/auftritte_2001_1/auftritte_2001_1_3_125.jpg" style="float:left; margin-right:10px;" width="125" />
+	<img alt="Bild vom Auftritt beim BGB Buchen" src="https://markusbrunner-design.github.io/darkrain_media/bilder/auftritte/auftritte_2001_1/auftritte_2001_1_3_125.jpg" style="float:left; margin-right:10px;" width="125" />
 	<p class="inhalt1">
 		Am Ende des Schuljahres hatten wir
 		einen Auftritt auf dem Schulhof,
@@ -146,7 +146,6 @@
 
 
 	<h1>Wie es weiterging</h1>
-	<img alt="Bild von den Alben von 2001 und 2003" src="../../shop/bilder/alben_2001_2003.jpg" style="float:right; margin-left:10px;" width="125" />
 	<p class="inhalt1">
 		In dieser Konstellation flogen die vier 2001 kurzerhand nach Amerika um im Echo-Beach-Studio
 		in Florida das erste Album, &quot;The First Songs&quot;, f&uuml;r die Nachwelt zu verewigen. Das zweite Album
@@ -169,7 +168,7 @@
 		die Saiten schwingen l&auml;sst und brachte mir gleich am folgenden Tag (nat&uuml;rlich aus reiner N&auml;chstenliebe und nicht aus Promotionzwecken)
 		beide Alben mit.
 	</p>
-	<img alt="Bild vom Auftritt in Adelsheim 2005" src="../../auftritte/auftritte_2005-06-18/auftritte_2005-06-18_7_125.jpg" style="float:left; margin-right:10px;" width="125" />
+	<img alt="Bild vom Auftritt in Adelsheim 2005" src="https://markusbrunner-design.github.io/darkrain_media/bilder/auftritte/auftritte_2005-06-18/auftritte_2005-06-18_7_125.jpg" style="float:left; margin-right:10px;" width="125" />
 	<p class="inhalt1">
 		Und wer h&auml;tte es gedacht? &ndash; Ich fand die CDs richtig klasse und prophezeite ihm voller Begeisterung sodann eine gro&szlig;e
 		Zukunft. Anstatt sich zu freuen kullerte ihm jedoch eine einsame Tr&auml;ne &uuml;ber die Wange (irgendwie muss ich meine Geschichte doch aufwerten!)
@@ -195,7 +194,7 @@
 		Auftritt. So wurde ich vom Fan zum Mitglied und stand nach zweieinhalb Monaten Basserfahrung auf der B&uuml;hne. Dadurch verdiente ich mir dann meinen Bandnamen
 		&quot;whizz kid&quot; &ndash; Senkrechtstarter.
 	</p>
-	<img alt="Bild vom Auftritt in M&uuml;nchen" src="../../auftritte/auftritte_2005-07-20/auftritte_2005-07-20_17_125.jpg" style="float:right; margin-left:10px;" width="125" />
+	<img alt="Bild vom Auftritt in M&uuml;nchen" src="https://markusbrunner-design.github.io/darkrain_media/bilder/auftritte/auftritte_2005-07-20/auftritte_2005-07-20_17_125.jpg" style="float:right; margin-left:10px;" width="125" />
 	<p class="inhalt1">
 		Und da mir Bass spielen mehr Spa&szlig; als Schreiben macht, schlie&szlig;e ich mit Markus Worten (in abge&auml;nderter, kommentierter Form): Kurzum, ab nun bestand
 		unsere Band wieder aus vier Mitgliedern. So ist es bis heute geblieben, und so wird es nun auch bleiben, denn heute sind wir mehr als nur eine Band,
