--- a/biographie/katja/katja.html
+++ b/biographie/katja/katja.html
@@ -1,5 +1,5 @@
 	<h1>Katja Deutschmann</h1>
-	<img alt="Bild von Bassistin Katja" src="../../multimedia/bilder/promotion/promotion_2005/promotion_2005_1.jpg" width="250" align="middle" border="0" />
+	<img alt="Bild von Bassistin Katja" src="https://markusbrunner-design.github.io/darkrain_media/bilder/promotion/promotion_2005/promotion_2005_1.jpg" width="250" align="middle" border="0" />
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr class="bggrau">
 			<td width="125" class="inhalt1bold">Geboren:</td>
