--- a/biographie/markus/markus.html
+++ b/biographie/markus/markus.html
@@ -1,5 +1,5 @@
 	<h1>Markus Brunner</h1>
-	<img alt="Bild von Gitarrist Markus" src="../../multimedia/bilder/promotion/promotion_2003/promotion_2003_3.jpg" width="250" align="middle" border="0" />
+	<img alt="Bild von Gitarrist Markus" src="https://markusbrunner-design.github.io/darkrain_media/bilder/promotion/promotion_2003/promotion_2003_3.jpg" width="250" align="middle" border="0" />
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr class="bggrau">
 			<td width="125" class="inhalt1bold">Geboren:</td>
