--- a/biographie/sarah/sarah.html
+++ b/biographie/sarah/sarah.html
@@ -1,5 +1,5 @@
 	<h1>Sarah Pfannenschwarz</h1>
-	<img alt="Bild von S&auml;ngerin Sarah" src="../../multimedia/bilder/promotion/promotion_2003/promotion_2003_2.jpg" width="250" align="middle" border="0" />
+	<img alt="Bild von S&auml;ngerin Sarah" src="https://markusbrunner-design.github.io/darkrain_media/bilder/promotion/promotion_2003/promotion_2003_2.jpg" width="250" align="middle" border="0" />
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr class="bggrau">
 			<td width="125" class="inhalt1bold">Geboren:</td>
