--- a/discographie/discographie.html
+++ b/discographie/discographie.html
@@ -67,7 +67,7 @@
 						<a href="https://markusbrunner-design.github.io/darkrain_media/discographie/songausschnitte_frame_of_mind/DarkRain_11_find_the_key.mp3" target="_self">Find the key</a>
 					</li>
 					<li>
-						<a href="https://markusbrunner-design.github.io/darkrain_media/discographie/songausschnitte_frame_of_mind/songausschnitte_frame_of_mind/DarkRain_12_day_when_i_went_down.mp3" target="_self">The day when I went down</a>
+						<a href="https://markusbrunner-design.github.io/darkrain_media/discographie/songausschnitte_frame_of_mind/DarkRain_12_day_when_i_went_down" target="_self">The day when I went down</a>
 					</li>
 					<li>
 						<a href="https://markusbrunner-design.github.io/darkrain_media/discographie/songausschnitte_frame_of_mind/DarkRain_13_see_you_again.mp3" target="_self">See you again</a>
