--- a/discographie/discographie.html
+++ b/discographie/discographie.html
@@ -10,16 +10,16 @@
 				<h2 style="padding-left:10px">The first songs (Ltd. Edition, 2001)</h2>
 				<ol>
 					<li>
-						<a href="https://markusbrunner-design.github.io/darkrain_media/discographie/songausschnitte_the_first_songs/DarkRain_01_thinking.mp3" target="_self">Thinking</a>
+						<a href="discographie/songausschnitte_the_first_songs/DarkRain_01_thinking.mp3" target="_self">Thinking</a>
 					</li>
 					<li>
-						<a href="https://markusbrunner-design.github.io/darkrain_media/discographie/songausschnitte_the_first_songs/DarkRain_02_ever.mp3" target="_self">Ever</a>
+						<a href="discographie/songausschnitte_the_first_songs/DarkRain_02_ever.mp3" target="_self">Ever</a>
 					</li>
 					<li>
-						<a href="https://markusbrunner-design.github.io/darkrain_media/discographie/songausschnitte_the_first_songs/DarkRain_03_seven.mp3" target="_self">Seven</a>
+						<a href="discographie/songausschnitte_the_first_songs/DarkRain_03_seven.mp3" target="_self">Seven</a>
 					</li>
 					<li>
-						<a href="https://markusbrunner-design.github.io/darkrain_media/discographie/songausschnitte_the_first_songs/DarkRain_04_are_you_really_loving_me.mp3" target="_self">Are you really loving me?</a>
+						<a href="discographie/songausschnitte_the_first_songs/DarkRain_04_are_you_really_loving_me.mp3" target="_self">Are you really loving me?</a>
 					</li>
 				</ol>
 				<br /><br />
@@ -37,49 +37,49 @@
 						Intro
 					</li>
 					<li>
-						<a href="https://markusbrunner-design.github.io/darkrain_media/discographie/songausschnitte_frame_of_mind/DarkRain_02_fight.mp3" target="_self">Fight</a>
+						<a href="discographie/songausschnitte_frame_of_mind/DarkRain_02_fight.mp3" target="_self">Fight</a>
 					</li>
 					<li>
-						<a href="https://markusbrunner-design.github.io/darkrain_media/discographie/songausschnitte_frame_of_mind/DarkRain_03_color_of_your_skin.mp3" target="_self">The color of your skin</a>
+						<a href="discographie/songausschnitte_frame_of_mind/DarkRain_03_color_of_your_skin.mp3" target="_self">The color of your skin</a>
 					</li>
 					<li>
-						<a href="https://markusbrunner-design.github.io/darkrain_media/discographie/songausschnitte_frame_of_mind/DarkRain_04_the_outsider.mp3" target="_self">Outsider</a>
+						<a href="discographie/songausschnitte_frame_of_mind/DarkRain_04_the_outsider.mp3" target="_self">Outsider</a>
 					</li>
 					<li>
-						<a href="https://markusbrunner-design.github.io/darkrain_media/discographie/songausschnitte_frame_of_mind/DarkRain_05_candlelight.mp3" target="_self">Candlelight</a>
+						<a href="discographie/songausschnitte_frame_of_mind/DarkRain_05_candlelight.mp3" target="_self">Candlelight</a>
 					</li>
 					<li>
-						<a href="https://markusbrunner-design.github.io/darkrain_media/discographie/songausschnitte_frame_of_mind/DarkRain_06_so_alone.mp3" target="_self">So alone</a>
+						<a href="discographie/songausschnitte_frame_of_mind/DarkRain_06_so_alone.mp3" target="_self">So alone</a>
 					</li>
 					<li>
-						<a href="https://markusbrunner-design.github.io/darkrain_media/discographie/songausschnitte_frame_of_mind/DarkRain_07_cold.mp3" target="_self">Cold</a>
+						<a href="discographie/songausschnitte_frame_of_mind/DarkRain_07_cold.mp3" target="_self">Cold</a>
 					</li>
 					<li>
-						<a href="https://markusbrunner-design.github.io/darkrain_media/discographie/songausschnitte_frame_of_mind/DarkRain_08_blue.mp3" target="_self">Blue</a>
+						<a href="discographie/songausschnitte_frame_of_mind/DarkRain_08_blue.mp3" target="_self">Blue</a>
 					</li>
 					<li>
-						<a href="https://markusbrunner-design.github.io/darkrain_media/discographie/songausschnitte_frame_of_mind/DarkRain_09_be_me.mp3" target="_self">Be me</a>
+						<a href="discographie/songausschnitte_frame_of_mind/DarkRain_09_be_me.mp3" target="_self">Be me</a>
 					</li>
 					<li>
-						<a href="https://markusbrunner-design.github.io/darkrain_media/discographie/songausschnitte_frame_of_mind/DarkRain_10_come_home.mp3" target="_self">Come home</a>
+						<a href="discographie/songausschnitte_frame_of_mind/DarkRain_10_come_home.mp3" target="_self">Come home</a>
 					</li>
 					<li>
-						<a href="https://markusbrunner-design.github.io/darkrain_media/discographie/songausschnitte_frame_of_mind/DarkRain_11_find_the_key.mp3" target="_self">Find the key</a>
+						<a href="discographie/songausschnitte_frame_of_mind/DarkRain_11_find_the_key.mp3" target="_self">Find the key</a>
 					</li>
 					<li>
-						<a href="https://markusbrunner-design.github.io/darkrain_media/discographie/songausschnitte_frame_of_mind/DarkRain_12_day_when_i_went_down" target="_self">The day when I went down</a>
+						<a href="discographie/songausschnitte_frame_of_mind/DarkRain_12_day_when_i_went_down" target="_self">The day when I went down</a>
 					</li>
 					<li>
-						<a href="https://markusbrunner-design.github.io/darkrain_media/discographie/songausschnitte_frame_of_mind/DarkRain_13_see_you_again.mp3" target="_self">See you again</a>
+						<a href="discographie/songausschnitte_frame_of_mind/DarkRain_13_see_you_again.mp3" target="_self">See you again</a>
 					</li>
 					<li>
-						<a href="https://markusbrunner-design.github.io/darkrain_media/discographie/songausschnitte_frame_of_mind/DarkRain_14_lost_angeles.mp3" target="_self">Lost angeles</a>
+						<a href="discographie/songausschnitte_frame_of_mind/DarkRain_14_lost_angeles.mp3" target="_self">Lost angeles</a>
 					</li>
 					<li>
-						<a href="https://markusbrunner-design.github.io/darkrain_media/discographie/songausschnitte_frame_of_mind/DarkRain_15_meant_to_die.mp3" target="_self">Meant to die</a>
+						<a href="discographie/songausschnitte_frame_of_mind/DarkRain_15_meant_to_die.mp3" target="_self">Meant to die</a>
 					</li>
 					<li>
-						<a href="https://markusbrunner-design.github.io/darkrain_media/discographie/songausschnitte_frame_of_mind/DarkRain_16_lose_you.mp3" target="_self">Lose you</a>
+						<a href="discographie/songausschnitte_frame_of_mind/DarkRain_16_lose_you.mp3" target="_self">Lose you</a>
 					</li>
 					<li>
 						Outro
