images link fix

--- a/discographie/discographie.html
+++ b/discographie/discographie.html
@@ -4,7 +4,7 @@
 	<!-- The First Songs -->
 		<tr>
 			<td width="125" class="inhalt1">
-				<img alt="Bild des Albums &quot;The First Songs&quot;" src="../shop/bilder/the_first_songs_vorne_125.jpg" width="125" border="1" style="border-color:rgb(153, 153, 153);" />
+				<img alt="Bild des Albums &quot;The First Songs&quot;" src="images/shop/the_first_songs_vorne_125.jpg" width="125" border="1" style="border-color:rgb(153, 153, 153);" />
 			</td>
 			<td width="375" style="padding-left:10px" class="inhalt1">
 				<h2 style="padding-left:10px">The first songs (Ltd. Edition, 2001)</h2>
@@ -28,7 +28,7 @@
 	<!-- Frame of Mind -->
 		<tr>
 			<td width="125" class="inhalt1">
-				<img alt="Bild des Albums &quot;Frame of Mind&quot;" src="../shop/bilder/frame_of_mind_vorne_125.jpg" width="125" border="1" style="border-color:rgb(153, 153, 153);" />
+				<img alt="Bild des Albums &quot;Frame of Mind&quot;" src="images/shop/frame_of_mind_vorne_125.jpg" width="125" border="1" style="border-color:rgb(153, 153, 153);" />
 			</td>
 			<td width="375" style="padding-left:10px" class="inhalt1">
 				<h2 style="padding-left:10px">Frame of Mind (2003)</h2>
