discographie to spotify

--- a/discographie/discographie.html
+++ b/discographie/discographie.html
@@ -8,7 +8,8 @@
 			</td>
 			<td width="375" style="padding-left:10px" class="inhalt1">
 				<h2 style="padding-left:10px">The first songs (Ltd. Edition, 2001)</h2>
-				<ol>
+				<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/album/5kmFTzsbgbUSPGxKGczNWu?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+				<!--<ol>
 					<li>
 						<a href="discographie/songausschnitte_the_first_songs/DarkRain_01_thinking.mp3" target="_self">Thinking</a>
 					</li>
@@ -21,7 +22,7 @@
 					<li>
 						<a href="discographie/songausschnitte_the_first_songs/DarkRain_04_are_you_really_loving_me.mp3" target="_self">Are you really loving me?</a>
 					</li>
-				</ol>
+				</ol>-->
 				<br /><br />
 			</td>
 		</tr>
@@ -32,7 +33,8 @@
 			</td>
 			<td width="375" style="padding-left:10px" class="inhalt1">
 				<h2 style="padding-left:10px">Frame of Mind (2003)</h2>
-				<ol>
+				<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/album/2ghrBmK7ADZ0hIqRvA4Bm0?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+				<!--<ol>
 					<li>
 						Intro
 					</li>
@@ -85,18 +87,13 @@
 						Outro
 					</li>
 					<br />
-				</ol>
+				</ol>-->
 			</td>
 		</tr>
 	</table>
 
 	<h2>Hope (das unvollendete Album)</h2>
-	<p class="inhalt1">
-		<img src="images/sonstiges/leather_book_cd-hope.png" width="250px" height="250px" /><br />
-		Songs: <a href="http://www.mp3.de/home/darkrain1">auf mp3.de</a><br />
-		Stra&szlig;enkinderlied-2-Musikvideo: <a href="http://www.youtube.com/watch?v=lDht0OuHjoE">auf youtube.com</a><br />
-		<object width="425" height="350"><param name="movie" value="http://www.youtube.com/v/lDht0OuHjoE"></param><embed src="http://www.youtube.com/v/lDht0OuHjoE" type="application/x-shockwave-flash" width="425" height="350"></embed></object>
-	</p>
+	<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/album/7q0ubf9IczjkEMe3xCmQxT?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
 	<br />
 	<p class="inhalt1">
