discographie to spotify

--- a/discographie/discographie.html
+++ b/discographie/discographie.html
@@ -7,7 +7,7 @@
 				<img alt="Bild des Albums &quot;The First Songs&quot;" src="images/shop/the_first_songs_vorne_125.jpg" width="125" border="1" style="border-color:rgb(153, 153, 153);" />
 			</td>
 			<td width="375" style="padding-left:10px" class="inhalt1">
-				<h2 style="padding-left:10px">The first songs (Ltd. Edition, 2001)</h2>
+				<h2 style="padding-left:10px">The first songs (2001)</h2>
 				<!--<ol>
 					<li>
 						<a href="discographie/songausschnitte_the_first_songs/DarkRain_01_thinking.mp3" target="_self">Thinking</a>
