--- a/discographie/discographie.html
+++ b/discographie/discographie.html
@@ -22,11 +22,8 @@
 						<a href="discographie/songausschnitte_the_first_songs/DarkRain_04_are_you_really_loving_me.mp3" target="_self">Are you really loving me?</a>
 					</li>
 				</ol>-->
-				<br /><br />
+				<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/album/5kmFTzsbgbUSPGxKGczNWu?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 			</td>
-		</tr>
-		<tr>
-			<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/album/5kmFTzsbgbUSPGxKGczNWu?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 		</tr>
 	<!-- Frame of Mind -->
 		<tr>
@@ -89,13 +86,15 @@
 					</li>
 					<br />
 				</ol>-->
+				<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/album/2ghrBmK7ADZ0hIqRvA4Bm0?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 			</td>
 		</tr>
 		<tr>
-			<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/album/2ghrBmK7ADZ0hIqRvA4Bm0?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-		</tr>
-		<tr>
-			<h2>Hope (das unvollendete Album)</h2>
-			<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/album/7q0ubf9IczjkEMe3xCmQxT?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+			<td width="125" class="inhalt1">
+				<h2>Hope (das unvollendete Album)</h2>
+			</td>
+			<td width="375" style="padding-left:10px" class="inhalt1">
+				<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/album/7q0ubf9IczjkEMe3xCmQxT?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+			</td>
 		</tr>
 	</table>
