--- a/discographie/discographie.html
+++ b/discographie/discographie.html
@@ -91,9 +91,10 @@
 		</tr>
 		<tr>
 			<td width="125" class="inhalt1">
-				<h2>Hope (das unvollendete Album)</h2>
+				<img alt="Bild des Albums &quot;Hope&quot;" src="images/sonstiges/leather_book_cd-hope.png" width="125" border="1" style="border-color:rgb(153, 153, 153);" />
 			</td>
 			<td width="375" style="padding-left:10px" class="inhalt1">
+				<h2 style="padding-left:10px">Hope (das unvollendete Album)</h2>
 				<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/album/7q0ubf9IczjkEMe3xCmQxT?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 			</td>
 		</tr>
