fixed image links

--- a/biographie/dark_rain/entstehung.html
+++ b/biographie/dark_rain/entstehung.html
@@ -122,7 +122,7 @@
 		(praktisch eine riesige Garage,
 		blo&szlig; f&uuml;r einen Helikopter) stattfand.
 	</p>
-	<img alt="Bild vom Auftritt beim BGB Buchen" src="https://markusbrunner-design.github.io/darkrain_media/bilder/auftritte/auftritte_2001_1/auftritte_2001_1_3_125.jpg" style="float:left; margin-right:10px;" width="125" />
+	<img alt="Bild vom Auftritt beim BGB Buchen" src="auftritte/auftritte_2001_1/auftritte_2001_1_3_125.jpg" style="float:left; margin-right:10px;" width="125" />
 	<p class="inhalt1">
 		Am Ende des Schuljahres hatten wir
 		einen Auftritt auf dem Schulhof,
@@ -168,7 +168,7 @@
 		die Saiten schwingen l&auml;sst und brachte mir gleich am folgenden Tag (nat&uuml;rlich aus reiner N&auml;chstenliebe und nicht aus Promotionzwecken)
 		beide Alben mit.
 	</p>
-	<img alt="Bild vom Auftritt in Adelsheim 2005" src="https://markusbrunner-design.github.io/darkrain_media/bilder/auftritte/auftritte_2005-06-18/auftritte_2005-06-18_7_125.jpg" style="float:left; margin-right:10px;" width="125" />
+	<img alt="Bild vom Auftritt in Adelsheim 2005" src="auftritte/auftritte_2005-06-18/auftritte_2005-06-18_7_125.jpg" style="float:left; margin-right:10px;" width="125" />
 	<p class="inhalt1">
 		Und wer h&auml;tte es gedacht? &ndash; Ich fand die CDs richtig klasse und prophezeite ihm voller Begeisterung sodann eine gro&szlig;e
 		Zukunft. Anstatt sich zu freuen kullerte ihm jedoch eine einsame Tr&auml;ne &uuml;ber die Wange (irgendwie muss ich meine Geschichte doch aufwerten!)
@@ -194,7 +194,7 @@
 		Auftritt. So wurde ich vom Fan zum Mitglied und stand nach zweieinhalb Monaten Basserfahrung auf der B&uuml;hne. Dadurch verdiente ich mir dann meinen Bandnamen
 		&quot;whizz kid&quot; &ndash; Senkrechtstarter.
 	</p>
-	<img alt="Bild vom Auftritt in M&uuml;nchen" src="https://markusbrunner-design.github.io/darkrain_media/bilder/auftritte/auftritte_2005-07-20/auftritte_2005-07-20_17_125.jpg" style="float:right; margin-left:10px;" width="125" />
+	<img alt="Bild vom Auftritt in M&uuml;nchen" src="auftritte/auftritte_2005-07-20/auftritte_2005-07-20_17_125.jpg" style="float:right; margin-left:10px;" width="125" />
 	<p class="inhalt1">
 		Und da mir Bass spielen mehr Spa&szlig; als Schreiben macht, schlie&szlig;e ich mit Markus Worten (in abge&auml;nderter, kommentierter Form): Kurzum, ab nun bestand
 		unsere Band wieder aus vier Mitgliedern. So ist es bis heute geblieben, und so wird es nun auch bleiben, denn heute sind wir mehr als nur eine Band,
