--- a/discographie/discographie.html
+++ b/discographie/discographie.html
@@ -99,3 +99,6 @@
 			</td>
 		</tr>
 	</table>
+
+	<h2>Top Tracks on Spotify</h2>
+	<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/artist/2c1qL17dDzybXajTFKWLq5?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
