--- a/discographie/discographie.html
+++ b/discographie/discographie.html
@@ -22,7 +22,7 @@
 						<a href="discographie/songausschnitte_the_first_songs/DarkRain_04_are_you_really_loving_me.mp3" target="_self">Are you really loving me?</a>
 					</li>
 				</ol>-->
-				<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/album/5kmFTzsbgbUSPGxKGczNWu?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+				<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/album/5kmFTzsbgbUSPGxKGczNWu?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 			</td>
 		</tr>
 	<!-- Frame of Mind -->
@@ -86,7 +86,7 @@
 					</li>
 					<br />
 				</ol>-->
-				<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/album/2ghrBmK7ADZ0hIqRvA4Bm0?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+				<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/album/2ghrBmK7ADZ0hIqRvA4Bm0?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 			</td>
 		</tr>
 		<tr>
@@ -95,7 +95,7 @@
 			</td>
 			<td width="375" style="padding-left:10px" class="inhalt1">
 				<h2 style="padding-left:10px">Hope (das unvollendete Album)</h2>
-				<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/album/7q0ubf9IczjkEMe3xCmQxT?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+				<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/album/7q0ubf9IczjkEMe3xCmQxT?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 			</td>
 		</tr>
 	</table>
